--- a/src/styles/PropertyCard.css
+++ b/src/styles/PropertyCard.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  gap: 10px;
+  margin: 5px;
   font-family: "Open Sans"; 
   background-color: #ffffff;
   box-shadow: 0 4px 8px 0 #c6c6c6;
